--- a/worker-app-pod.yml
+++ b/worker-app-pod.yml
@@ -3,8 +3,9 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: worker-app-pod
-  labels: worker-app-pod
-  app: demo-voting-app
+  labels:
+    name: worker-app-pod
+    app: demo-voting-app
 spec:
   containers:
     - name: worker-app
